[gd_scene load_steps=6 format=3 uid="uid://b30un2wr7q785"]

[ext_resource type="Texture2D" uid="uid://dogproa5y2i35" path="res://Art/UI/panel.png" id="1_iq3rg"]
[ext_resource type="Texture2D" uid="uid://bpmeylqraw6tx" path="res://Art/UI/heart.png" id="1_n3ndx"]
[ext_resource type="Script" path="res://UI.gd" id="1_x4xpv"]
[ext_resource type="Texture2D" uid="uid://bl1tvir14dc04" path="res://Art/UI/coin.png" id="2_s8614"]

[sub_resource type="LabelSettings" id="LabelSettings_yyx43"]
font_size = 50

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x4xpv")

[node name="PanelCoins" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 28.0
offset_top = 493.0
offset_right = 203.0
offset_bottom = 668.0
texture = ExtResource("1_iq3rg")

[node name="Coin" type="TextureRect" parent="PanelCoins"]
layout_mode = 2
offset_left = 11.0
offset_top = 56.0
offset_right = 74.0
offset_bottom = 119.0
texture = ExtResource("2_s8614")

[node name="Label" type="Label" parent="PanelCoins"]
layout_mode = 0
offset_left = 80.0
offset_top = 52.0
offset_right = 161.0
offset_bottom = 118.0
text = "0"
label_settings = SubResource("LabelSettings_yyx43")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelHearts" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 945.0
offset_top = 492.0
offset_right = 1120.0
offset_bottom = 667.0
texture = ExtResource("1_iq3rg")

[node name="Heart" type="TextureRect" parent="PanelHearts"]
layout_mode = 2
offset_left = 13.0
offset_top = 58.0
offset_right = 73.0
offset_bottom = 118.0
texture = ExtResource("1_n3ndx")

[node name="Label2" type="Label" parent="PanelHearts"]
layout_mode = 0
offset_left = 80.0
offset_top = 54.0
offset_right = 161.0
offset_bottom = 120.0
text = "0"
label_settings = SubResource("LabelSettings_yyx43")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelTime" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 28.0
offset_top = 2.0
offset_right = 203.0
offset_bottom = 177.0
texture = ExtResource("1_iq3rg")

[node name="Label" type="Label" parent="PanelTime"]
layout_mode = 0
offset_left = 2.0
offset_top = 34.0
offset_right = 175.0
offset_bottom = 140.0
text = "5:00"
label_settings = SubResource("LabelSettings_yyx43")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeartContainer" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.0
offset_right = 74.0
offset_bottom = 50.0
grow_horizontal = 2
scale = Vector2(1.5, 1.5)

[node name="Heart2" type="TextureRect" parent="HeartContainer"]
layout_mode = 2
texture = ExtResource("1_n3ndx")

[connection signal="ready" from="." to="." method="_on_ready"]
